force-app/main/default/objects/Parts_Price_Matrix__c/Parts_Price_Matrix__c.object-meta.xml
<CustomObject>
    <label>Parts Price Matrix</label>
    <pluralLabel>Parts Price Matrixs</pluralLabel>
    <nameField>
        <displayFormat>PPM-{00000}</displayFormat>
        <label>Parts Price Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>