force-app/main/default/objects/Parts_Price_Matrix__c/fields/SAC__c.field-meta.xml
<CustomField>
    <fullName>SAC__c</fullName>
    <label>SAC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>